<resources>
    <string name="app_name">AgroFarm</string>
    <string name="get_started"><![CDATA[Get Started >>]]></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_to_continue">Signin to continue</string>
    <string name="mobile_number">mobile number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="welcome_to">Welcome To</string>
    <string name="agrofarm">AgroFarm</string>
    <string name="dealer">Deader</string>
    <string name="farmer">Farmer</string>
    <string name="we_are_popular_in_agriculture_market_globally">We are popular in agriculture market globally</string>

</resources>